--- a/client/src/App.css
+++ b/client/src/App.css
@@ -1,3 +1,8 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+::-webkit-scrollbar {
+    width: 0 !important;
+    background: transparent; /* Optional: Set the background color of the scrollbar area */
+  }
